// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders default 1`] = `
<input
  aria-invalid="false"
  class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-agrisas-medium focus:border-agrisas-medium disabled:bg-gray-50 disabled:cursor-not-allowed transition-colors duration-150"
  name="email"
/>
`;

exports[`Input renders with error 1`] = `
<input
  aria-invalid="true"
  class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-agrisas-medium focus:border-agrisas-medium disabled:bg-gray-50 disabled:cursor-not-allowed transition-colors duration-150 error"
  name="email"
/>
`;
